logs/scheduler/2023-12-20/dag_with_postgres.py.log
[2023-12-20T07:37:10.318+0000] {processor.py:157} INFO - Started process (PID=98991) to work on /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:37:10.319+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/dag_with_postgres.py for tasks to queue
[2023-12-20T07:37:10.320+0000] {logging_mixin.py:154} INFO - [2023-12-20T07:37:10.320+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:37:10.342+0000] {logging_mixin.py:154} INFO - [2023-12-20T07:37:10.339+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/dag_with_postgres.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/dag_with_postgres.py", line 2
    from airflow import import DAG
                        ^
SyntaxError: invalid syntax
[2023-12-20T07:37:10.344+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:37:10.373+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/dag_with_postgres.py took 0.058 seconds
[2023-12-20T07:37:40.645+0000] {processor.py:157} INFO - Started process (PID=99042) to work on /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:37:40.647+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/dag_with_postgres.py for tasks to queue
[2023-12-20T07:37:40.648+0000] {logging_mixin.py:154} INFO - [2023-12-20T07:37:40.648+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:37:40.663+0000] {logging_mixin.py:154} INFO - [2023-12-20T07:37:40.661+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/dag_with_postgres.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/dag_with_postgres.py", line 2
    from airflow import import DAG
                        ^
SyntaxError: invalid syntax
[2023-12-20T07:37:40.663+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:37:40.685+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/dag_with_postgres.py took 0.045 seconds
[2023-12-20T07:38:11.062+0000] {processor.py:157} INFO - Started process (PID=99097) to work on /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:38:11.063+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/dag_with_postgres.py for tasks to queue
[2023-12-20T07:38:11.065+0000] {logging_mixin.py:154} INFO - [2023-12-20T07:38:11.064+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:38:11.085+0000] {logging_mixin.py:154} INFO - [2023-12-20T07:38:11.084+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/dag_with_postgres.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/dag_with_postgres.py", line 2
    from airflow import import DAG
                        ^
SyntaxError: invalid syntax
[2023-12-20T07:38:11.086+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/dag_with_postgres.py
[2023-12-20T07:38:11.152+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/dag_with_postgres.py took 0.095 seconds
